# meeting_room_reservation

./: alembic.ini  app.py  docker-compose.yml  pyproject.toml  sql_app.db
app/: main.py
app/api/: booking.py  login.py  room.py  user.py
app/core/: deps.py  security.py
app/crud/: auth.py  booking.py  crud.py  login.py  room.py  user.py
app/db/: database.py
app/models/: booking.py  room.py  user.py
app/schemas/: booking.py  login.py  room.py  schemas.py  user.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  booking.py  room.py  user.py
backend/app/crud/: auth.py  booking.py  room.py
backend/app/db/: database.py
backend/app/models/: booking.py  user.py
backend/app/schemas/: user.py
frontend/components/: booking_view.py  header.py  login.py  user_view.py
frontend/utils/: api_client.py  components.py  helpers.py
migrations/: env.py
sql_app/: database.py  models.py
streamlit_app/: app.py
streamlit_app/components/: booking_view.py  login.py  room_view.py  user_view.py
streamlit_app/utils/: api_client.py  components.py  helpers.py
